bad/bin_op_lth_bool_string.example_compiler_output
ERROR
[1mbad/bin_op_lth_bool_string.lat:3:7: [1;31merror: [0;1moperator < is defined only for int values and string values, not `boolean` and `string`[m
	true < "";
	     [1;32m^[m
